--- a/views/partials/claim-edit.ejs
+++ b/views/partials/claim-edit.ejs
@@ -56,8 +56,15 @@ Goals for this page: POST changes to appropriate places in db upon submission
   
   <% if (locals.comments) { %>  
   <div>
-   <b>Employee Comments: </b>
-    <table class="table">
+   <b>Comments: </b>
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>Comment</th>
+          <th>Commenter</th>
+        </tr>
+      </thead>
+      <tbody>
       <% comments.forEach(comment=>{ %>
         <tr>
           <td><%=comment.description%>
@@ -65,7 +72,9 @@ Goals for this page: POST changes to appropriate places in db upon submission
           <td><%=result.employee%></td>
         </tr>
       <%})%>
+      </tbody>
     </table>
+
   </div>
   <%}%>
   
