👚🏞 Checkpoint ./views/claims.ejs:10221761/117 ./views/partials/claim-edit.ejs:10221761/11 ./routes/views.js:10221761/31 ./routes/api.js:10221761/753

--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -174,8 +174,9 @@ Goals for this page: create claims, Re-open a closed claim ✓, close a claim if
           "content-type":"application/json",
         },
         body: JSON.stringify({
-          resolutionid: resolution,
-          claimid: claim
+          claimid:claim,
+          description:comment,
+          employeeid: 1
         }),
         method: 'POST'
         }).then(resp=>{
