--- a/views/partials/claim-edit.ejs
+++ b/views/partials/claim-edit.ejs
@@ -67,8 +67,7 @@ Goals for this page: POST changes to appropriate places in db upon submission
       <tbody>
       <% comments.forEach(comment=>{ %>
         <tr>
-          <td><%=comment.description%>
-          </td>
+          <td><%=comment.description%></td>
           <td><%=result.employee%></td>
         </tr>
       <%})%>
