--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -6,7 +6,7 @@
 <h1>
   Customers
 </h1>
-  Goals for this page: sort customers ✓, create customers
+  Goals for this page: sort customers ✓, create customers ✓
 
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <b>Sort by:</b>
