--- a/views/partials/claim-edit.ejs
+++ b/views/partials/claim-edit.ejs
@@ -7,112 +7,129 @@
   Edit Claim
 </h2>
 Goals for this page: POST changes to appropriate places in db upon submission 
-<form id="updateform" onsubmit="update(this);">  
-  <div><b>Customer: </b><%=result.customer%></div>
- 
-  <div><b>Product: </b><%=result.product%> <b>Product Id: </b><%=result.productid%></div>
-  
-  <div>
-    <b>Issue: </b>
-    <select id="issueList">
-      <% if (locals.issues) { %> 
-        <option value="" disabled selected hidden><%=result.issue%> </option> <!--  keeping the selected issue visible in dropdown box -->
-        <% issues.forEach(issue=>{ %>
-        <option value='<%=issue.name%>'><%=issue.name %></option>
-         <% } )%>
-      <% } %>
-    </select>
-  </div>
-  
-  <div>
-    <b>Status: </b>
-    <select id="status">
-      <option value="" disabled selected hidden><%=result.status%></option> <!--  keeping the selected status visible in dropdown box -->
-      <%if (result.status==="Closed"){%>
-      <option value='Open'>Open</option>
-       <% }else{ %>
-      <option value='Closed'>Closed</option>
-      <% } %>
-    </select>
-  </div>
-  
-  <div>
-    <b>Description: </b>
-    <input value="<%=result.description%>" id="description" name="description" type="text" >
-  </div>
-  
-  <div>
-    <b>Employee: </b>
-    <select id="employeeList">
-      <% if (locals.employees) { %> 
-        <option value="" disabled selected hidden><%=result.employee%> </option> <!--  keeping the selected employee visible in dropdown box -->
-        <% employees.forEach(employee=>{ %>
-        <option value='<%=employee.lastname%>'><%=employee.firstname %> <%=employee.lastname%></option>
-         <% } )%>
 
-      <% } %>
-    </select>
-  </div>
-  
-  <% if (locals.comments) { %>  
-  <div>
-   <b>Comments: </b>
-    <table class="table table-striped table-bordered">
-      <thead>
-        <tr>
-          <th>Comment</th>
-          <th>Commenter</th>
-        </tr>
-      </thead>
-      <tbody>
-      <% comments.forEach(comment=>{ %>
-        <tr>
-          <td><%=comment.description%></td>
-          <td>
-            <% if (locals.employees){%>
-            <% if (locals.comments){%>
-            <% if (comment.employeeid>0){%>
-              <%=employees[comment.employeeid-1].firstname%> 
-              <%=employees[comment.employeeid-1].lastname%>
-            <%}else{%>
-              <%=employees[0].firstname%> 
-              <%=employees[0].lastname%>
-            <%}%>
-            <%}%>
-            <%}%>
-          </td>
-        </tr>
-      <%})%>
-      </tbody>
-    </table>
-  </div>
-  <%}%>
-  
-  <% if (locals.resolutions) { %>  
-  <div>
-    <b>Resolution: </b>
-    <select id="resolutionList">
-       <!--  keeping the selected letter visible in dropdown box -->
-        <option value="" disabled selected hidden><%=result.resolution%> </option> <!--  keeping the selected resolution visible in dropdown box -->
-        <% resolutions.forEach(resolution=>{ %>
-        <option value='<%=resolution.name%>'><%=resolution.name%></option>
-        <% } )%>
-    </select>
-  </div>
-  <% } %>
- 
-  <div>
-    <b>Date Opened: </b>
-  </div>
- 
-  <div>
-    <b>Date Closed: </b>
-  </div>
-  
-  <input type="submit">
-</form>
+
+<button  onclick="modal()">Create New Customer</button>
+
+      <form id="updateform" onsubmit="update(this);">  
+        <span><b>Customer: </b><%=result.customer%></span>
+        <span><b>Product: </b><%=result.product%> <b>Product Id: </b><%=result.productid%></span>
+        <div>
+          <b>Issue: </b>
+          <select id="issueList">
+          <% if (locals.issues) { %> 
+            <option value="" disabled selected hidden><%=result.issue%> </option> <!--  keeping the selected issue visible in dropdown box -->
+            <% issues.forEach(issue=>{ %>
+            <option value='<%=issue.name%>'><%=issue.name %></option>
+            <% } )%>
+          <% } %>
+          </select>
+        </div>
+        <div>
+          <b>Status: </b>
+          <select id="status">
+            <option value="" disabled selected hidden><%=result.status%></option> <!--  keeping the selected status visible in dropdown box -->
+            <%if (result.status==="Closed"){%>
+            <option value='Open'>Open</option>
+             <% }else{ %>
+            <option value='Closed'>Closed</option>
+            <% } %>
+          </select>
+        </div>
+        <div>
+          <b>Description: </b>
+          <input value="<%=result.description%>" id="description" name="description" type="text" >
+        </div>
+        <div>
+          <b>Employee: </b>
+          <select id="employeeList">
+            <% if (locals.employees) { %> 
+              <option value="" disabled selected hidden><%=result.employee%> </option> <!--  keeping the selected employee visible in dropdown box -->
+              <% employees.forEach(employee=>{ %>
+              <option value='<%=employee.lastname%>'><%=employee.firstname %> <%=employee.lastname%></option>
+               <% } )%>
+            <% } %>
+          </select>
+        </div>
+        <% if (locals.comments) { %>  
+        <div>
+         <b>Comments: </b>
+          <table class="table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th>Comment</th>
+                <th>Commenter</th>
+              </tr>
+            </thead>
+            <tbody>
+            <% comments.forEach(comment=>{ %>
+              <tr>
+                <td><%=comment.description%></td>
+                <td>
+                  <% if (locals.employees){%>
+                  <% if (locals.comments){%>
+                  <% if (comment.employeeid>0){%>
+                    <%=employees[comment.employeeid-1].firstname%> 
+                    <%=employees[comment.employeeid-1].lastname%>
+                  <%}else{%>
+                    <%=employees[0].firstname%> 
+                    <%=employees[0].lastname%>
+                  <%}%>
+                  <%}%>
+                  <%}%>
+                </td>
+              </tr>
+            <%})%>
+            </tbody>
+          </table>
+        </div>
+        <%}%>
+        <% if (locals.resolutions) { %>  
+        <div>
+          <b>Resolution: </b>
+          <select id="resolutionList">
+             <!--  keeping the selected letter visible in dropdown box -->
+              <option value="" disabled selected hidden><%=result.resolution%> </option> <!--  keeping the selected resolution visible in dropdown box -->
+              <% resolutions.forEach(resolution=>{ %>
+              <option value='<%=resolution.name%>'><%=resolution.name%></option>
+              <% } )%>
+          </select>
+        </div>
+        <% } %>
+        <div>
+          <b>Date Opened: </b>
+        </div>
+        <div>
+          <b>Date Closed: </b>
+        </div>
+        <input type="submit">
+      </form>
 
 <script type=text/javascript>
+  //if comments, add comment
+  //else update 
+  fetch('https://ejs-views-practice.glitch.me/api/customers/address', {
+        headers:{
+          "content-type":"application/json",
+        },
+        body: JSON.stringify({
+          city:document.getElementById("city").value,
+          state:document.getElementById("state").value,
+          streetaddress:document.getElementById("address1").value,
+          streetaddress2:document.getElementById("address2").value,
+          zip:document.getElementById("zip").value,
+          email:document.getElementById("email").value,
+          firstname:document.getElementById("firstname").value,
+          lastname:document.getElementById("lastname").value,
+          phone:document.getElementById("phone").value
+        }),
+            method: 'POST'
+        }).then(resp=>{
+        }, err=>{
+          console.log(err);
+        })
+      location = location //refresh
+  }
 </script>
 
 <%})%>
